--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "client",
+  "name": "nbgwas-frontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^3.5.1",
+    "@material-ui/core": "^3.6.1",
     "@material-ui/icons": "^3.0.1",
-    "axios": "^0.18.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-scripts": "2.1.1"
@@ -25,6 +24,6 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "proxy": "http://localhost:5000",
-	"homepage": "http://nbgwas.ucsd.edu/build"
+  "homepage": "www.nbgwas.ucsd.edu/build",
+  "devDependencies": {}
 }
