--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^3.6.1",
     "@material-ui/icons": "^3.0.1",
+    "axios": "^0.18.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-scripts": "2.1.1"
@@ -24,6 +25,5 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "homepage": "www.nbgwas.ucsd.edu/build",
-  "devDependencies": {}
+  "homepage": "http://www.nbgwas.ucsd.edu/build/"
 }
