--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "deploy": "npm run build && rsync -rlzv --progress --exclude=.git --exclude=.vscode `pwd`/build/ nbgwas.ucsd.edu:/var/www/html/",
+    "stage": "npm run build && rsync -rlzv --progress --exclude=.git --exclude=.vscode `pwd`/build/ secret.ndexbio.org:/var/www/html/naga",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -26,6 +27,8 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "proxy": "http://nbgwas.ucsd.edu",
+  "proxyDeploy": "http://nbgwas.ucsd.edu",
+  "proxyStage": "http://secret.ndexbio.org",
+  "proxy": "http://secret.ndexbio.org",
   "homepage": "."
 }
