--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "@material-ui/core": "^3.6.1",
     "@material-ui/icons": "^3.0.1",
     "axios": "^0.18.0",
+    "cytoscape-cx2js": "^0.5.1",
     "react": "^16.6.3",
+    "react-cytoscapejs": "^1.1.0",
     "react-dom": "^16.6.3",
     "react-scripts": "^2.1.3"
   },
@@ -14,7 +16,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "deploy": "npm run build && rsync -rlzv --progress --exclude=.git --exclude=.vscode `pwd`/build/ nbgwas.ucsd.edu:/var/www/html/",
-    "stage": "npm run build && rsync -rlzv --progress --exclude=.git --exclude=.vscode `pwd`/build/ secret.ndexbio.org:/var/www/html/naga",
+    "stage": "npm run build && rsync -rlzv --progress --exclude=.git --exclude=.vscode `pwd`/build/ nbgwas-stage.ucsd.edu:/var/www/html/",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -27,8 +29,10 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "proxyDeploy": "http://nbgwas.ucsd.edu",
-  "proxyStage": "http://secret.ndexbio.org",
-  "proxy": "http://secret.ndexbio.org",
-  "homepage": "."
+  "proxy": "http://nbgwas-stage.ucsd.edu",
+  "devServer": {
+    "proxy": {
+      "/nagadata/**": "http://nbgwas-stage.ucsd.edu" 
+    }
+  }
 }
