--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
     "react": "^16.6.3",
     "react-cytoscapejs": "^1.1.0",
     "react-dom": "^16.6.3",
-    "react-scripts": "^2.1.3"
+    "react-google-login": "^5.0.2",
+    "react-scripts": "^2.1.5"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "deploy": "npm run build && rsync -rlzv --progress --exclude=.git --exclude=.vscode `pwd`/build/ nbgwas.ucsd.edu:/var/www/html/",
-    "stage": "scp -r `pwd`/build/ nbgwas-stage.ucsd.edu:~/frontend",
+    "stage": "scp -r `pwd`/build nbgwas-stage.ucsd.edu:~/frontend",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -30,10 +31,10 @@
     "not op_mini all"
   ],
   "proxy": "http://nbgwas-stage.ucsd.edu",
-	"homepage": ".",
+  "homepage": ".",
   "devServer": {
     "proxy": {
-      "/nagadata/**": "http://nbgwas-stage.ucsd.edu" 
+      "/nagadata/**": "http://nbgwas-stage.ucsd.edu"
     }
   }
 }
