--- a/package.json
+++ b/package.json
@@ -6,12 +6,16 @@
     "@material-ui/core": "^3.6.1",
     "@material-ui/icons": "^3.0.1",
     "axios": "^0.18.0",
+    "codecov": "^3.2.0",
     "cytoscape-cx2js": "^0.5.1",
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.11.2",
     "react": "^16.6.3",
     "react-cytoscapejs": "^1.1.0",
     "react-dom": "^16.6.3",
     "react-google-login": "^5.0.2",
-    "react-scripts": "^2.1.5"
+    "react-scripts": "^2.1.5",
+    "react-test-renderer": "^16.8.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -19,6 +23,7 @@
     "deploy": "scp -r `pwd`/build nbgwas.ucsd.edu:~/frontend",
     "stage": "scp -r `pwd`/build nbgwas-stage.ucsd.edu:~/frontend",
     "test": "react-scripts test",
+    "coverage": "react-scripts test --coverage",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
