--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-dom": "^16.6.3",
     "react-google-login": "^5.0.2",
     "react-scripts": "^2.1.5",
-    "react-test-renderer": "^16.8.4"
+    "react-test-renderer": "^16.8.4",
+    "sinon": "^7.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
